@@ -3,6 +3,14 @@
 this repository contains the full copyright notices and license terms. -->
 <tryton>
     <data>
+        <!-- ################# -->
+        <!-- # Configuration # -->
+        <!-- ################# -->
+        <record model="ir.ui.view" id="configuration_view_form">
+            <field name="model">offered.configuration</field>
+            <field name="inherit" ref="offered.configuration_view_form"/>
+            <field name="name">configuration_form</field>
+        </record>
         <!-- ############ -->
         <!-- # Coverage # -->
         <!-- ############ -->
