@@ -1,3 +1,5 @@
+* BUG#8789 Configuration des séquences de numéros de prêts
+
 Version 2.0 - 2018-04-13
 * BUG#8527 Ajout d'un hook pour permettre la surcharge du calcul de la date de fin du contrat apartir de la date de fin du prêt
 * FEA#8338 Initialisation de l'adresse de l'organisme prêteur si une seule adresse est disponible
